# mlang

./: CMakeLists.txt  LICENSE  README.md  tmp
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  main.cpp  script.txt  script.txt_backup
examples/file_read/: CMakeLists.txt  main.cpp  script.mlang  script.txt  wpa_supplicant.conf
examples/localtime/: CMakeLists.txt  localtime.tz  main.cpp  script.mlang
examples/parallel/: CMakeLists.txt  helper_functions.hpp  main.cpp  script_1.mlang  script_2.mlang  values.conf
examples/pow/: CMakeLists.txt  main.cpp  script.mlang
examples/simple/: CMakeLists.txt  main.cpp  script.txt
include/mlang/: ast.hpp  code.hpp  environment.hpp  exception.hpp  function.hpp  parser.hpp  script.hpp  token.hpp  tokenizer.hpp  value.hpp
include/mlang/ast/: array_node.hpp  assignment.hpp  binary_operations.hpp  block_node.hpp  break_node.hpp  comparison.hpp  constructor_node.hpp  continue_node.hpp  declaration.hpp  exception.hpp  exit_node.hpp  for_node.hpp  func_call_node.hpp  func_decl_node.hpp  function.hpp  if_node.hpp  logic_operations.hpp  main_node.hpp  member_access.hpp  member_function.hpp  node.hpp  print_node.hpp  return_node.hpp  subscript_node.hpp  unary_operations.hpp  value_node.hpp  variable_node.hpp  while_node.hpp
include/mlang/func/: function.hpp
include/mlang/object/: array.hpp  assert.hpp  boolean.hpp  float.hpp  int.hpp  internal_object.hpp  none.hpp  number.hpp  object.hpp  string.hpp
include/mlang/parser/: ast.hpp  parser.hpp
include/mlang/parser/ast/: assignment.hpp  binary_operations.hpp  block_node.hpp  break_node.hpp  comparison.hpp  continue_node.hpp  contiue_node.hpp  declaration.hpp  end_node.hpp  exception.hpp  exit_node.hpp  for_node.hpp  func_call_node.hpp  func_decl_node.hpp  if_node.hpp  indexing_node.hpp  main_node.hpp  member_function.hpp  node.hpp  print_node.hpp  return_node.hpp  subscript_node.hpp  unary_operations.hpp  value_node.hpp  variable_node.hpp  while_node.hpp
include/mlang/script/: environment.hpp  script.hpp  token.hpp
include/mlang/tokenizer/: code.hpp  tokenizer.hpp
interpreter/: CMakeLists.txt  main.cpp
source/: CMakeLists.txt
source/mlang/: CMakeLists.txt
source/mlang/ast/: CMakeLists.txt  array_node.cpp  assignment.cpp  binary_operations.cpp  block_node.cpp  break_node.cpp  comparison.cpp  constructor_node.cpp  continue_node.cpp  declaration.cpp  exit_node.cpp  for_node.cpp  func_call_node.cpp  func_decl_node.cpp  if_node.cpp  logic_operations.cpp  main_node.cpp  member_access.cpp  member_function.cpp  print_node.cpp  return_node.cpp  subscript_node.cpp  unary_operations.cpp  value_node.cpp  variable_node.cpp  while_node.cpp
source/mlang/object/: CMakeLists.txt  array.cpp  boolean.cpp  float.cpp  int.cpp  internal_object.cpp  none.cpp  number.cpp  object.cpp  string.cpp
source/mlang/parser/: CMakeLists.txt  parser.cpp
source/mlang/script/: CMakeLists.txt  environment.cpp  script.cpp  token.cpp
source/mlang/tokenizer/: CMakeLists.txt  code.cpp  tokenizer.cpp
test/: CMakeLists.txt  ast_test.cpp  constructor_test.cpp  custom_class_test.cpp  custom_func_test.cpp  error_test.cpp  function_test.cpp  indexing_test.cpp  main.cpp  object_test.cpp  parser_test.cpp  script_test.cpp  tokenizer_test.cpp  value_test.cpp  while_loop_test.cpp
